--- a/apps/ebill_server/priv/browser/partial/charging.html
+++ b/apps/ebill_server/priv/browser/partial/charging.html
@@ -47,7 +47,12 @@
     </div>
     <div class="col-md-6">
       <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+      <div ng-if="request">
+        <h3>Request</h3>
+        <div hljs source="show_request()"></div>
+      </div>
       <div ng-if="result">
+        <h3>Response</h3>
         <div hljs source="show_result()"></div>
       </div>
     </div>
